--- a/index.html
+++ b/index.html
@@ -283,7 +283,6 @@ pre{
   border-radius:14px;
 }
 
-/* YouTube thumbnail -> click to play (placeholder until you add video_id) */
 .yt-wrap{ width:100%; aspect-ratio:16/9; position:relative; }
 .yt-thumb{
   width:100%; height:100%;
@@ -321,7 +320,6 @@ pre{
   letter-spacing:.08em;
 }
 
-/* Dot logo animation */
 .dots{ display:inline-flex; gap:6px; margin-left:6px; transform: translateY(1px); }
 .dot{
   width:4px; height:4px; border-radius:50%;
@@ -426,45 +424,12 @@ pre{
     "espresso_profile": "ethiopia"
   },
 
-  {
-    "id": "single-coming-soon-03",
-    "type": "single",
-    "name": "Single Origin 03",
-    "sub": "Coming soon",
-    "desc": "Details will be updated.",
-    "coming_soon": true
-  },
-  {
-    "id": "single-coming-soon-04",
-    "type": "single",
-    "name": "Single Origin 04",
-    "sub": "Coming soon",
-    "desc": "Details will be updated.",
-    "coming_soon": true
-  },
-  {
-    "id": "single-coming-soon-05",
-    "type": "single",
-    "name": "Single Origin 05",
-    "sub": "Coming soon",
-    "desc": "Details will be updated.",
-    "coming_soon": true
-  },
+  { "id": "single-coming-soon-03", "type": "single", "name": "Single Origin 03", "sub": "Coming soon", "desc": "Details will be updated.", "coming_soon": true },
+  { "id": "single-coming-soon-04", "type": "single", "name": "Single Origin 04", "sub": "Coming soon", "desc": "Details will be updated.", "coming_soon": true },
+  { "id": "single-coming-soon-05", "type": "single", "name": "Single Origin 05", "sub": "Coming soon", "desc": "Details will be updated.", "coming_soon": true },
 
-  {
-    "id": "guide-dripbag",
-    "type": "guide",
-    "name": "DRIP BAG",
-    "sub": "1 Bag · 11g",
-    "desc": "10ea box · brew guide"
-  },
-  {
-    "id": "guide-coldbrew",
-    "type": "guide",
-    "name": "COLD BREW",
-    "sub": "No.1 · No.2 · No.5",
-    "desc": "serve guide"
-  }
+  { "id": "guide-dripbag", "type": "guide", "name": "DRIP BAG", "sub": "1 Bag · 11g", "desc": "10ea box · brew guide" },
+  { "id": "guide-coldbrew", "type": "guide", "name": "COLD BREW", "sub": "No.1 · No.2 · No.5", "desc": "serve guide" }
 ]
 let ITEMS = [];
 let activeFilter = "all";
